--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="account_settings">Email and Password Settings</string>
     <string name="preference_settings">Preference Settings</string>
     <string name="logout">Logout</string>
-    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="section_format">Information for Tab %1$d </string>
 </resources>
